Day 4 and 5 collective frontend update
